test/sema/struct_cycle.dmz
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
struct Color {
// CHECK: [[# @LINE - 1 ]]:1: error: struct 'Color' contains itself
  r: int,
  g: int,
  b: int,
  c: Color,
}

fn main() -> void {}
